2007-10-25 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 441: Don't free the raw1394 handle when we see a hub (Fabien
	           Spindler)

2007-10-25 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 440: Fixed bad #define in two example programs. Thanks to
	           Edward Rankin.
	* SVN 439: dc1394_get_one_shot never returned DC1394_TRUE but 2^31
	           instead. Fixed by Damien Delannay.

2007-10-21 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 438: Fix SVN version in the changelog
	* SVN 437: Add a pause between ROM readings in camera detection
        * SVN 436: Several bugs corrected by Irv Elshoff in the camera
	           detection code (Linux only).

2007-09-26 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 435: Updated the AUTHORS file.
	
2007-09-20 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 434: Updated the definition of DC1394_BAYER_METHOD_MAX
	           (Johann Schoonees)

2007-09-19 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 433: fixed some warnings that appeared when using the
	           "-pedantic" compilation option (variadic macros and
		   // comments)

2007-09-18 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 432: Removed spurious comma in the declaration of
	           dc1394trigger_source_t (Johann Schoonees)
	
2007-09-17 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 431: Add a "flags" member (uint32_t) to dc1394camera_t struct.
        * SVN 430: Change the name dc1394id_t to dc1394camera_id_t to avoid
	           confusion with future IDs that could be created later in
		   libdc1394.

2007-09-14 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 429: Introduce a new type: dc1394id_t. It contains the GUID
	           and the unit number for unique identification. The function
		   dc1394_is_same_camera(id1, id2) can be used to compare ids.

2007-09-13 Damien Douxchamps http://damien.douxchamps.net/